fixed word wrap

--- a/index.css
+++ b/index.css
@@ -154,6 +154,8 @@ input{
     justify-content: center;
     align-items: center;
     flex-wrap:nowrap;
+    text-align: center;
+
 }
 .hand-signs{
     display:flex;
